public interface HeroicUnit {
    String castAbility();
}
