package tiles;

public class Empty extends Tile {
    private static final char EMPTY_TILE = '.';

    public Empty() {
        super(EMPTY_TILE);
    }
}